--- a/app/Product/product.module.css
+++ b/app/Product/product.module.css
@@ -1,29 +1,21 @@
-.products {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  overflow-y: hidden;
-  padding: 80px 50px;
-}
-.product {
-  height: 500px;
+@media (max-width: 768px) {
+  .products {
+    padding: 50px 20px; /* Further adjusted padding for smaller screens */
+  }
 
-  border-radius: 64px 0px 0px 64px;
-  margin: 50px 0px;
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: flex;
-  align-items: center;
-  width: 100%;
-  border: 2px solid black;
-}
-.details {
-  padding: 0px 50px;
-}
-.btnarea {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 50px;
+  .product {
+    height: auto;
+    border-radius: 0; /* Removed border-radius for smaller screens */
+    margin: 20px 0;
+  }
+
+  .details {
+    padding: 0 20px;
+  }
+
+  .btnarea {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+  }
 }
