--- a/app/page.module.css
+++ b/app/page.module.css
@@ -2,34 +2,9 @@
   background-color: white;
   overflow-x: hidden;
 }
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 80px;
-  background-color: #351c0f;
-  color: white;
-  font-family: "La Belle Aurore";
-  padding: 0px 20px;
-}
+
 .main h1 {
   width: 150px;
-}
-.description {
-  display: flex;
-  color: white;
-  font-family: Arial, Helvetica, sans-serif;
-  align-items: center;
-  justify-content: space-between;
-}
-.description a {
-  margin: 10px;
-  font-size: 20px;
-  padding-right: 20px;
-  margin-right: 10px;
-  text-decoration: none;
-  color: white;
 }
 
 .center {
@@ -90,7 +65,28 @@
   text-decoration: none;
   font-style: none;
 }
-.logo {
-  text-decoration: none;
-  color: white;
+@media (max-width: 768px) {
+  .center {
+    height: auto;
+  }
+  .content {
+    width: 100%;
+    height: auto;
+    border-radius: 0;
+  }
+
+  .title {
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .para {
+    width: 100%;
+    margin-left: 0;
+  }
+
+  .herobtn {
+    position: relative;
+    margin: 20px 0 0 0;
+  }
 }
