--- a/app/components/footer/footer.module.css
+++ b/app/components/footer/footer.module.css
@@ -1,5 +1,4 @@
 .bottom {
-  height: 150px;
   background-color: #351c0f;
   display: flex;
   align-items: center;
@@ -11,6 +10,7 @@
   align-items: center;
   justify-content: center;
   border: none;
+  margin: 20px;
 }
 .footer {
   color: white;
@@ -20,4 +20,9 @@
   text-align: center;
   line-height: 25px;
   background-color: black;
+}
+@media (max-width: 768px) {
+  .bottom {
+    flex-direction: column;
+  }
 }
