--- a/app/page.module.css
+++ b/app/page.module.css
@@ -23,10 +23,8 @@
   width: 800px;
   height: 480px;
   background-color: rgba(0, 0, 0, 0.449);
-
   color: white;
   border-radius: 0px 50px 50px 0px;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -67,26 +65,39 @@
 }
 @media (max-width: 768px) {
   .center {
+    flex-direction: column;
     height: auto;
   }
   .content {
-    width: 100%;
+    width: 80vw;
     height: auto;
-    border-radius: 0;
+    border-radius: 9.5px;
+    margin-left: -35px;
+  }
+  .content h1 {
+    color: white;
+    font-size: 1.5rem;
   }
 
   .title {
     width: 100%;
     margin-left: 0;
+    font-size: 1.5rem;
   }
 
   .para {
     width: 100%;
     margin-left: 0;
+    font-size: 0.5rem;
+  }
+  .title .para {
+    font-size: 1rem;
   }
 
   .herobtn {
     position: relative;
-    margin: 20px 0 0 0;
+    margin-top: 50px;
+    padding: 10px;
+    font-size: 0.5rem;
   }
 }
